--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "npx prettier --write ./app"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "lucide-react": "^0.511.0",
     "next": "15.1.6",
     "react": "^19.0.0",
